@@ -1,6 +1,9 @@
 package az.work.orderservice.service.impl;
 
+import az.work.orderservice.client.InventoryClient;
+import az.work.orderservice.controller.Request;
 import az.work.orderservice.dto.InventoryResponse;
+import az.work.orderservice.dto.OrderLineItemsDto;
 import az.work.orderservice.dto.OrderRequest;
 import az.work.orderservice.entity.Order;
 import az.work.orderservice.entity.OrderLineItems;
@@ -9,13 +12,19 @@ import az.work.orderservice.mapper.OrderMapper;
 import az.work.orderservice.repository.OrderRepository;
 import az.work.orderservice.service.OrderService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.web.reactive.function.BodyInserters;
 import org.springframework.web.reactive.function.client.WebClient;
+import reactor.core.publisher.Mono;
 
+import java.net.URI;
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,17 +34,18 @@ public class OrderServiceImpl implements OrderService {
     private final OrderRepository orderRepository;
     private final WebClient.Builder webClientBuilder;
     private final OrderMapper orderMapper;
+//    private final InventoryClient inventoryClient;
     @Override
     public void placeOrder(OrderRequest orderRequest) {
+        System.out.println(orderRequest);
         Order order = new Order();
         order.setOrderNumber(UUID.randomUUID().toString());
         List<OrderLineItems> orderLineItems = orderRequest.getOrderLineItemsDtoList()
                 .stream()
-                .map(orderLineItemsDto -> orderMapper.mapToEntity(orderLineItemsDto)).toList();
+                .map(orderLineItemsDto -> orderMapper.mapToEntity(orderLineItemsDto)).collect(Collectors.toList());
         order.setOrderLineItemsList(orderLineItems);
 
-        List<String> skuCode = orderLineItems.stream().map(orderLineItem -> orderLineItem.getSkuCode()).toList();
-
+        List<String> skuCode = orderLineItems.stream().map(orderLineItem -> orderLineItem.getSkuCode()).collect(Collectors.toList());
         InventoryResponse[] inventoryResponsesArray = webClientBuilder.build().get()
                 .uri("http://inventory-service/api/inventory", urlBuilder -> urlBuilder.queryParam("skuCode", skuCode).build())
                 .retrieve()
@@ -47,6 +57,23 @@ public class OrderServiceImpl implements OrderService {
         } else {
             throw DataNotFoundException.productNotInStockException();
         }
+    }
+
+    @Override
+    public void save(Request request){
+        webClientBuilder.build()
+                .post()
+                .uri("http://inventory-service/api/inventory")
+                .bodyValue(request)
+                .retrieve()
+                .bodyToMono(Request.class)
+                .block();
+    }
+
+    @Override
+    public List<Order> findAll() {
+        List<Order> all = orderRepository.findAll();
+        return all;
     }
 
 }
